# serp

./: .gitignore  CMakeLists.txt  Call.h  LICENSE  LICENSE-COMMERCIAL.md  README.md  Timer.cpp  Timer.h  build_host.sh  itc.cpp  itc.h  itc.hpp  main.cpp
_private/: Call.h  Call.hpp  CallBinder.h  CallBinder.hpp  Dispatcher.cpp  Dispatcher.h  Dispatcher.hpp  Event.cpp  Event.h  Event.hpp  EventLoop.cpp  EventLoop.h  EventLoop.hpp  ICallable.h  ICallable.hpp  Logger.hpp  Timer.cpp  Timer.h  Timer.hpp  itc.cpp  tuple_utils.h  tuple_utils.hpp
demo/: CMakeLists.txt  CallDemo.h  CallDemo.hpp  CallStaticDemo.h  CallStaticDemo.hpp  EventDemo.h  EventDemo.hpp  EventStaticDemo.hpp  RequestDemo.h  RequestDemo.hpp  TimerDemo.h  TimerDemo.hpp  main.cpp
demo/DemoTest/: DemoTest.hpp
demo/DemoTest/Client/: IClient.hpp
demo/DemoTest/Client/private/: Client.cpp
demo/DemoTest/Server/: IServer.hpp
demo/DemoTest/Server/private/: Calc.cpp  Calc.hpp  ICalcConsumer.hpp  Server.cpp  Server.hpp
demo/component_test/: DependencyMock.cpp
demo/generator/: run.sh
demo/generator/project/: Analytics.fidl  AppComponentDiagram.puml  Audio.fidl  Network.fidl  NetworkManager.fidl  Player.fidl  Settings.fidl  Storage.fidl  UI.fidl  UIRenderer.fidl  UserInput.fidl  Video.fidl
demo/method/: CMakeLists.txt  demo_method.cpp
demo/notification/: demo_notification.cpp
demo/runtime_console/: CMakeLists.txt
demo/timer/: demo_timer.cpp
demo/watchdog/: CMakeLists.txt  demo_watchdog.cpp
itctest/: Validator.cpp
old/: CMakeLists.txt
old/_private/: Attribute.hpp  Call.hpp  Dispatcher.cpp  Dispatcher.hpp  Event.cpp  EventLoop.cpp  EventLoop.hpp  Logger.cpp  Logger.hpp  Timer.hpp
old/demo/: CMakeLists.txt  CallStaticDemo.hpp  EventDemo.hpp  EventStaticDemo.hpp  TimerDemo.hpp
old/itctest/: Validator.hpp
old/test_demo/: CMakeLists.txt  build_sdk.sh
old/test_demo/Calc/: ICalc.hpp  ICalcConsumer.hpp
old/test_demo/Calc/private/: Calc.hpp
old/test_demo/Client/: IClient.hpp
old/test_demo/Client/private/: Client.cpp
old/test_demo/Server/: IServer.hpp
old/test_demo/Server/private/: Server.hpp
old/test_demo/Server/test/: ServerTest.cpp
old/test_demo/Server/test/stubs/: CalcStub.hpp  ClientStub.hpp
old/test_demo/Server/test/testcases/: Factorial10.hpp
serp/: CMakeLists.txt
serp/demo/: CMakeLists.txt
serp/demo/command/: CMakeLists.txt  demo_command.cpp
serp/demo/component_test/: CMakeLists.txt  CUT.cpp  CUT.hpp  DemoTest.cpp  DemoTest.hpp  DependencyMock.cpp  DependencyMock.hpp  TestCases.cpp
serp/demo/method/: CMakeLists.txt  demo_method.cpp
serp/demo/notification/: CMakeLists.txt  demo_notification.cpp
serp/demo/property/: CMakeLists.txt  demo_property.cpp
serp/demo/runtime_console/: demo_runtime_console.cpp  test.sh
serp/demo/timer/: CMakeLists.txt  demo_timer.cpp
serp/demo/watchdog/: CMakeLists.txt  demo_watchdog.cpp
serp/src/: CMakeLists.txt  serp.hpp
serp/src/command/: Command.cpp  Command.hpp  CommandPool.cpp  CommandPool.hpp  CommandProcessor.cpp  CommandProcessor.hpp  CommandQueue.cpp  CommandQueue.hpp  FSM.hpp  ICommand.cpp  ICommand.hpp  LambdaCommand.cpp  LambdaCommand.hpp
serp/src/core/: App.cpp  App.hpp  Async.hpp  AsyncWithDelay.hpp  Call.hpp  Event.hpp  EventLoop.cpp  EventLoop.hpp  Invokable.hpp  Invoker.hpp  Method copy.hpp  Method.hpp  Notification.hpp  PPromise copy.hpp  PPromise.hpp  PRequest.hpp  PTimer.cpp  PTimer.hpp  Promise.hpp  Property.hpp  Request.hpp  Response.hpp  Service.cpp  Service.hpp  SyncMethod.hpp  Timer.cpp  Timer.hpp  Watchdog.cpp  Watchdog.hpp
serp/src/logger/: Dumpers.cpp  Dumpers.hpp  LogManager.cpp  LogManager.hpp  LogTag.cpp  LogTag.hpp  LogWriter.cpp  LogWriter.hpp  Loggable.hpp  Logger.cpp  Logger.hpp  types.cpp  types.hpp
serp/src/logger/strategies/: ILogStrategy.hpp  LogStrategyCommon.cpp  LogStrategyCommon.hpp  LogStrategyConsole.cpp  LogStrategyConsole.hpp  LogStrategyFile.cpp  LogStrategyFile.hpp
serp/src/runtime/: MethodParser.hpp  Runtime.cpp  RuntimeConsole.cpp  RuntimeConsole.hpp
serp/src/test_engine/: CMakeLists.txt  PromiseTest.hpp  ReplyHolder.cpp  ReplyHolder.hpp  TestRunner.cpp  TestRunner.hpp
src/command/: CommandPool.cpp  CommandPool.hpp  CommandProcessor.hpp  CommandQueue.cpp  ICommand.cpp
src/core/: AsyncWithDelay.hpp  Event.hpp  EventLoop.hpp  Invoker.hpp  Notification.hpp  PRequest.hpp  PTimer.cpp  Promise copy.hpp  Promise.hpp  Service.hpp  Timer.cpp
src/logger/: Dumpers.cpp  LogManager.cpp  LogWriter.cpp  Logger.cpp  Logger.hpp  types.hpp
src/logger/strategies/: ILogStrategy.hpp  LogStrategyCommon.hpp  LogStrategyConsole.cpp  LogStrategyFile.hpp
src/runtime/: CMakeLists.txt  MethodParser.hpp  Runtime.hpp
src/test_engine/: CMakeLists.txt  TestRunner.hpp
test_demo/: CMakeLists.txt  TestDemo.hpp  main.cpp  test.cpp
test_demo/Calc/: ICalc.hpp
test_demo/Calc/private/: Calc.cpp  Calc.hpp
test_demo/Client/: IClient.hpp
test_demo/Client/private/: Client.hpp
test_demo/Server/: IServer.hpp
test_demo/Server/private/: Server.cpp  Server.hpp
test_demo/Server/test/: CMakeLists.txt  ServerTest.cpp  ServerTest.hpp  Validator.cpp  Validator.hpp  build_host.sh  test.cpp  testcases.hpp
test_demo/Server/test/stubs/: CalcStub.hpp  ClientStub.hpp
test_demo/Server/test/testcases/: Factorial5.hpp
